@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/libxslt
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.145 2006/12/21 07:59:45 robbat2 Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.146 2007/01/18 03:05:30 leonardop Exp $
+
+*libxslt-1.1.20 (18 Jan 2007)
+
+  18 Jan 2007; Leonardo Boshell <leonardop@gentoo.org>
+  -libxslt-1.1.19.ebuild, +libxslt-1.1.20.ebuild:
+  New release. Removing 1.1.19 because of some important bugs it had,
+  including bug #159318.
 
   21 Dec 2006; Robin H. Johnson <robbat2@gentoo.org> libxslt-1.1.19.ebuild:
   Fix libxml DEP.
